Meta information added!

--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
+    <!--    Twitter Card-->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:url" content="https://spotlight-text.netlify.app"/>
+    <meta name="twitter:title" content="Spotlight text effect"/>
+    <meta name="twitter:description" content="Created for desktop mode, enjoy and relax."/>
+    <meta name="twitter:image" content="./images/meta.jpeg"/>
+    <meta name="twitter:image:alt" content="Meta image alternative text"/>
+
+    <!--    Open Graph data-->
+    <meta property="og:url" content="https://spotlight-text.netlify.app"/>
+    <meta property="og:type" content="Website"/>
+    <meta property="og:title" content="Spotlight text effect"/>
+    <meta property="og:description" content="Created for desktop mode, enjoy and relax."/>
+    <meta property="og:image:url" content="./images/meta.jpeg"/>
+    <meta property="og:image:alt" content="Meta image alternative text"/>
+
+    <meta name="keywords" content="Spotlight, light, text, texteffect, effect"/>
+
+
+    <title>Spotlight text effect</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap"
