Meta information added!

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 
     <title>Spotlight text effect</title>
+    <meta name="description" content="Created for desktop mode, enjoy and relax.">
+
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
